# Meta-OpenENV-Hackathon

./: .gitignore  Dockerfile  LICENSE  README.md  client.py  demo.py  inference.py  interactive_ui.py  openenv.yaml  pyproject.toml  requirements.txt  test_agent.py  train_agent.py
core/: dataset.py  grader.py  models.py  reward.py  tasks.py
data/: enron_sample.txt
scripts/: validate-submission.sh
server/: app.py  environment.py
